[package]
name = "cbt"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01005CA01580E000"
package-resources = [
    { local = "ModFiles/exefs", package = "atmosphere/contents/01005CA01580E000/exefs/" },
    { local = "ModFiles/sd", package = "p5r/bind/" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.5.1"
camino = { version = "1", features = ["serde1"] }
thiserror = "1.0.30"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = {version = "0.9.5", features = ["serde"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
